--- a/global-variables.scss
+++ b/global-variables.scss
@@ -2,21 +2,27 @@
 $primary: #007bff;
 $primary-2: darken($primary, 20%);
 $success: #28a745;
+$success-2: darken($success, 20%);
 $info: #17a2b8;
+$info-2: darken($info, 20%);
 $warning: #ffc107;
+$warning-2: darken($warning, 20%);
 $danger: #dc3545;
-$light: #f8f9fa;
+$danger-2: darken($danger, 20%);
+$light: #cccccc;
+$light-2: darken($light, 20%);
 $dark: #343a40;
+$dark-2: darken($dark, 20%);
 $white: #ffffff;
+$white-2: darken($white, 20%);
 $transparent: transparent;
 
-
 // Screen Breakpoints
-$xs: 575;
-$sm: 576;
-$md: 768;
-$lg: 992;
-$xl: 1200;
+$xs: '575px';
+$sm: '576px';
+$md: '768px';
+$lg: '992px';
+$xl: '1200px';
 
 // Fonts
-$global-font: hind;
+$global-font: 'Montserrat', sans-serif;
